# wallabag_mcp

./: LICENSE  pyproject.toml
src/: client_test.py  entries.json  server.py  wallabag_client.py
tests/: test_wallabag_client.py
