[project]
name = "wallabag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=2.5.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.1",
    "pydantic>=2.11.5",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "python-dotenv>=1.1.0",
    "respx>=0.22.0",
]

[tool.flake8]
max-line-length = 120
